# strigil-crawler-client

./: .gitignore  README.md  pyproject.toml
strigil_crawler_client/: __init__.py  client.py  models.py
strigil_crawler_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
